--- a/config/database.yml
+++ b/config/database.yml
@@ -22,11 +22,11 @@ test:
 
 production:
   <<: *default
-  database: meshiterro
+  database: sampledb
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
-  host: RDSのエンドポイント名
-  username: RDSの接続ユーザ名
-  password: RDSのパスワード
+  host: rds-mysql-server.cbqsrl4lymbk.ap-northeast-1.rds.amazonaws.com
+  username: root
+  password: pandaman01ku
